# 90sBSD

./: .clang-format  .clang-tidy  .gitignore  BUILD_GUIDE_M1.md  CMakeLists.txt  CMakePresets.json  CODE_MARKERS_QUICK_START.txt  CURRENT_STATE.md  DAYS_1_2_COMPLETE.md  IMPORT_LOG.txt  INSTALL.md  M1_SETUP_COMPLETE.md  MODERNIZATION_ROADMAP.md  Makefile  PHASE_4_COMPLETE.md  PHASE_5_DAY_2_PROGRESS.md  PHASE_5_SETUP_COMPLETE.md  PHASE_6_7_COMPLETE.md  README.md  REALITY_CHECK.md  REPOSITORY_HYGIENE.md  SESSION_SUMMARY_2025-11-19.md  boot-qemu.sh  build-m1.sh  code_markers_index.csv  compile-kernel.sh  docker-compose.yml  kernel.ld  requirements.md  setup.md
.build-cache/: build-cache.sh  build.conf  parallel-build.sh
.build-cache/dependencies/: dependency-graph.json
.devcontainer/: Dockerfile  Dockerfile.rosetta  devcontainer.json  docker-compose.yml
.github/: build-config.env
.github/containers/: Dockerfile.dev
.github/scripts/: build-analysis.sh  install-deps.sh
.github/workflows/: build.yml
boot/: kernel.elf
boot/grub/: grub.cfg
cmake/toolchains/: clang-i386-elf.cmake
docs/: CMakeLists.txt  Doxyfile.in  MODERNIZATION_SESSION_SUMMARY.md  PHASE_0_EXECUTION_PLAN.md  PHASE_0_WEEK1_COMPLETE.md  PHASE_0_WEEKS_2-4_ROADMAP.md  README.md  codebase-segmentation.rst  conf.py  header-audit.md  include-audit.md  index.rst  reproducible-build.md  sysroot.md  tooling-report.md  tooling.rst
docs/guides/: TOOL_INSTALLATION_GUIDE.md
docs/history/: PHASE_5-7_RESCOPE.md  PHASE_5_COMPLETE.md  PHASE_5_DAY_1_COMPLETE.md  PHASE_6_7_DETAILED_PLAN.md  SETUP_SUMMARY.md  WEEK_4_PROGRESS_REPORT.md
docs/standards/: ALTERNATE_HISTORY_EVOLUTION.md  C17_SUSV4_ROADMAP.md  COMPREHENSIVE_AUDIT_REPORT.md
mk/: c17-strict.mk  clang-elf.mk
placeholder/: README.md
scripts/: add-header-guards.sh  analyze-c17-compliance.py  analyze-kernel-build.sh  analyze_code.sh  build-orchestrator.sh  build-troubleshoot.sh  ccwrap  ccwrap.md  collect-baseline-metrics.sh  extract-n-error-files.py  fix-duplicate-return-comprehensive.py  fix-duplicate-return-types.py  fix-implicit-functions-batch.py  fix-implicit-functions.py  fix-inline-asm.sh  fix-kr-functions-multi.py  fix-kr-functions-with-inference.py  fix-main-return-int.py  fix-main-return-types.sh  fix-strict-prototypes.sh  fix-undeclared-identifiers.py  header-dependency-graph.py  header_audit.py  import-from-bsd.sh  make-sysroot.sh  make-sysroot.sh.md  relativize_symlinks.py  run-static-analysis.sh  scan-includes.py  static-analysis.sh
tests/: CMakeLists.txt  test-runner.sh  test_docs.sh  test_include_audit.sh  test_kernel.sh
tests/smoke/: CMakeLists.txt  hello.c
tools/build-optimization/: README.md
tools/build-optimization/cache/: incremental-build.sh
tools/build-optimization/metrics/: collect-metrics.sh
usr/src/bootstrap/: trimhd.c
usr/src/bootstrap/boot/: prf.c  printf.c  saerrno.h  saio.h  saioctl.h
usr/src/games/arithmetic/: arithmetic.c
usr/src/games/atc/: def.h  extern.h  graphics.c  include.h  input.c  list.c  log.c  main.c  pathnames.h  struct.h  tunable.h  update.c
usr/src/games/battlestar/: battlestar.c  com1.c  com2.c  com3.c  com4.c  com5.c  com6.c  com7.c  cypher.c  externs.h  fly.c  getcom.c  init.c  misc.c  parse.c  pathnames.h  room.c  save.c
usr/src/games/bcd/: bcd.c
usr/src/games/caesar/: caesar.c
usr/src/games/chess/: gnuchess.c  gnuchess.h  move.c  move.h  nondsp.c  pathnames.h  uxdsp.c
usr/src/games/cribbage/: cards.c  crib.c  cribbage.h  cribcur.h  deck.h  instr.c  io.c  pathnames.h  score.c  support.c
usr/src/games/dm/: dm.c  pathnames.h
usr/src/games/factor/: factor.c
usr/src/include/: a.out.h  ar.h  assert.h  bitstring.h  ctype.h  curses.h  dirent.h  err.h  errno.h  fcntl.h  fnmatch.h  fstab.h  fts.h  glob.h  grp.h  kvm.h  limits.h  locale.h  math.h  memory.h  ndbm.h  netdb.h  nlist.h  paths.h  pwd.h  ranlib.h  regexp.h  resolv.h  setjmp.h  sgtty.h  signal.h  stab.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  strings.h  struct.h  syslog.h  (+10 more)
usr/src/kernel/: IMPORT_LOG.txt  assym.s  machine  test2.c
(+2008 files in other folders)
